--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "apexcharts": "^3.41.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "^8.43.0",
